--- a/main.html
+++ b/main.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <title>Array Example</title>
+  </head>
+  <body>
+    <h1>Array Example</h1>
+    <ul id="list"></ul>
+    <script src="script.js"></script>
+  </body>
 </html>
