--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Array Example</title>
+    <title>Using Arrays in JavaScript</title>
   </head>
   <body>
-    <h1>Array Example</h1>
-    <script src="script.js"></script>
+    <h1>Using Arrays in JavaScript</h1>
+    <script src="app.js"></script>
   </body>
 </html>
