--- a/main.html
+++ b/main.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <title>Array Example</title>
-  </head>
-  <body>
-    <h1>Array Example</h1>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
 </html>
